--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -68,16 +68,8 @@
                     <li>
                         <a href="../pages/project.html">CURRENT PROJECTS</a>
                     </li>
-
                     <li class="dropdown">
-                        <a href="../pages/blogs.html" class="dropbtn">BLOGS</a>
-                        <div class="dropdown-content">
-                            <a href="#">Linux</a>
-                            <a href="#">DevOps</a>
-                            <a href="#">Monitoring</a>
-                            <a href="#">MLOps</a>
-                            <a href="#">Data science</a>
-                        </div>
+                        <a href="pages/blogs.html">BLOGS</a>
                     </li>
                     <li>
                         <a href="../pages/quiz.html">QUIZ</a>
