--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -97,17 +97,8 @@
                     <li>
                         <a href="../pages/project.html">CURRENT PROJECT</a>
                     </li>
-
                     <li class="dropdown">
-                        <a href="../pages/blogs.html" class="dropbtn">BLOGS</a>
-                        <div class="dropdown-content">
-                            <a href="#">Linux</a>
-                            <a href="#">DevOps</a>
-                            <a href="#">Monitoring</a>
-                            <a href="#">Cloud</a>
-                            <a href="#">MLOps</a>
-                            <a href="#">Data science</a>
-                        </div>
+                        <a href="pages/blogs.html">BLOGS</a>
                     </li>
                     <li>
                         <a href="../pages/quiz.html">QUIZ</a>
@@ -123,11 +114,6 @@
             </nav>
         </header>
         <section class="content">
-            <p>
-                Quizzes can be an effective tool for programmer to test their
-                knowledge and reinforce what they have learned.
-            </p>
-
             <div class="card-container">
                 <div class="card">
                     <h2>SQL BASIC</h2>
