--- a/pages/contact.html
+++ b/pages/contact.html
@@ -69,17 +69,8 @@
                     <li>
                         <a href="../pages/project.html">CURRENT PROJECTS</a>
                     </li>
-
                     <li class="dropdown">
-                        <a href="../pages/blogs.html" class="dropbtn">BLOGS</a>
-                        <div class="dropdown-content">
-                            <a href="#">Linux</a>
-                            <a href="#">DevOps</a>
-                            <a href="#">Monitoring</a>
-                            <a href="#">Cloud</a>
-                            <a href="#">MLOps</a>
-                            <a href="#">Data science</a>
-                        </div>
+                        <a href="pages/blogs.html">BLOGS</a>
                     </li>
                     <li>
                         <a href="../pages/quiz.html">QUIZ</a>
@@ -105,21 +96,6 @@
                         >sheikh.vazid.ahmed@gmail.com</a
                     >
                 </p>
-
-                <section>
-                    <h1>DM me on Social account</h1>
-                    <div class="social-links">
-                        <a
-                            href="https://www.linkedin.com/in/vazid/"
-                            class="social-link"
-                            >LinkedIn</a
-                        >
-                        <a href="https://x.com/sudovazid" class="social-link"
-                            >Twitter</a
-                        >
-                    </div>
-                </section>
-
                 <form id="contact-form" class="contact-form">
                     <div class="form-group">
                         <label for="name">Name *</label>
@@ -198,6 +174,19 @@
 
                     <button type="submit" class="submit-btn">Submit</button>
                 </form>
+                <section>
+                    <h1>DM me on Social account</h1>
+                    <div class="social-links">
+                        <a
+                            href="https://www.linkedin.com/in/vazid/"
+                            class="social-link"
+                            >LinkedIn</a
+                        >
+                        <a href="https://x.com/sudovazid" class="social-link"
+                            >Twitter</a
+                        >
+                    </div>
+                </section>
             </main>
         </div>
 
