--- a/pages/project.html
+++ b/pages/project.html
@@ -69,17 +69,8 @@
                     <li>
                         <a href="../pages/project.html">CURRENT PROJECTS</a>
                     </li>
-
                     <li class="dropdown">
-                        <a href="../pages/blogs.html" class="dropbtn">BLOGS</a>
-                        <div class="dropdown-content">
-                            <a href="#">Linux</a>
-                            <a href="#">DevOps</a>
-                            <a href="#">Monitoring</a>
-                            <a href="#">Cloud</a>
-                            <a href="#">MLOps</a>
-                            <a href="#">Data science</a>
-                        </div>
+                        <a href="pages/blogs.html">BLOGS</a>
                     </li>
                     <li>
                         <a href="../pages/quiz.html">QUIZ</a>
@@ -144,7 +135,7 @@
                         ></a>
                     </div>
                     <div class="project">
-                        <h2 class="project-name">District Lab</h2>
+                        <h2 class="project-name">District Hub</h2>
                         <span class="status in-progress">IN PROGRESS</span>
                         <a href="#" class="project-link"
                             >Learn More <i class="fas fa-arrow-right"></i
